Change target "acceleration" to "drivers"

--- a/features/mbedtls/importer/Makefile
+++ b/features/mbedtls/importer/Makefile
@@ -37,7 +37,7 @@ TARGET_INC:=$(TARGET_PREFIX)inc
 TARGET_TESTS:=$(TARGET_PREFIX)TESTS
 TARGET_SRV_IMPL:=$(TARGET_PREFIX_CRYPTO)/platform/TARGET_PSA/COMPONENT_PSA_SRV_IMPL
 TARGET_SPE:=$(TARGET_PREFIX_CRYPTO)/platform/TARGET_PSA/COMPONENT_SPE
-TARGET_PSA_ACCELERATION:=$(TARGET_PREFIX_CRYPTO)/targets
+TARGET_PSA_DRIVERS:=$(TARGET_PREFIX_CRYPTO)/targets
 TARGET_NSPE:=$(TARGET_SRV_IMPL)/COMPONENT_NSPE
 
 # mbed TLS source directory - hidden from mbed via TARGET_IGNORE
@@ -81,7 +81,7 @@ rsync:
 	mkdir -p $(TARGET_SRV_IMPL)
 	mkdir -p $(TARGET_SPE)
 	mkdir -p $(TARGET_NSPE)
-	mkdir -p $(TARGET_PSA_ACCELERATION)
+	mkdir -p $(TARGET_PSA_DRIVERS)
 
 	rsync -a --delete --exclude='crypto_struct.h' $(MBED_CRYPTO_API) $(TARGET_INC)
 	rsync -a --delete $(MBED_CRYPTO_API)/crypto_struct.h $(TARGET_NSPE)
